--- a/jsoft/j4.html
+++ b/jsoft/j4.html
@@ -5,6 +5,9 @@
 <link type="text/css" rel="stylesheet" href="../tools/style.css"/>
 <style type="text/css">@font-face {font-family: SHREE_BAN_OTF_0592;src: local("../tools/SHREE_BAN_OTF_0592"),url(../tools/SHREE0592.woff) format("opentype");</style>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v19.0" nonce="Q7jTbrCq"></script>
+
 <script src="../tools/jquery-1.10.2.min.js"></script>
 
 <script>
@@ -95,6 +98,11 @@ body {
 .scrpt {
   border-left: 5px solid black;
 }
+
+.box {
+  border: 2px solid black;
+  display: inline-block;
+}
 </style>
 <script>
 window.onscroll = function() {myFunction()};
@@ -122,13 +130,12 @@ function myFunction() {
   else
     tphldr.innerHTML = header[index].innerHTML
 }
-</script><script type="text/javascript" src="https://www.isical.ac.in/~arnabc/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script type="text/javascript" src="../MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="../tools/htmlwidgets.js"></script>
+</script><script type="text/javascript" src="https://arnabc74.github.io/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script type="text/javascript" src="file:///home/asu/na/v/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="../tools/htmlwidgets.js"></script>
 <link href="../tools/rgl.css" rel="stylesheet"></link>
 <script src="../tools/rglClass.src.js"></script>
 <script src="../tools/CanvasMatrix.src.js"></script>
 <script src="../tools/rglWebGL.js"></script>
-</head>
-<body>
+</head><body>
 <div class="sticky" id="topholder"> </div>
 <a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
 <h3>Table of contents</h3>
@@ -164,6 +171,7 @@ blocks: <a href="https://code.jsoftware.com/wiki/NuVoc">NuVoc</a>.
 <p></p>
 Visit this site. It is as informative and indispensible as a
 dictionary, and about as appetizing. 
+<p></p>
 
 <p></p>
 The first thing that you should notice is that all the basic
@@ -181,11 +189,13 @@ But trying to remember the basic functions by groups is as boring
 and inefficient as trying to build vocabulary by reading a
 dictionary. Instead, we shall group them here by usefulness and
 familiarity.
+<p></p>
 
 <h2><a
 name="Familiar function, familiar symbol">Familiar function, familiar symbol</a></h2>
 Here are the basic functions that you expect to be present in any
 language, and J uses the same symbols as most other languages:
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>+</code></font>, <font color="red"><code>-</code></font>, <font color="red"><code>*</code></font>, <font color="red"><code>^</code></font> (dyads)</b></legend>
@@ -193,6 +203,7 @@ These all behave exactly as you'd expect, except that evaluation
 is always from right to left.
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>&lt; </code></font>, <font color="red"><code>&gt; </code></font> (dyads)</b></legend>
@@ -200,6 +211,7 @@ These are the familiar comparisons. They return 0 or 1.  J does
 not have any separate boolean data type.
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>'</code></font>, <font color="red"><code>(</code></font> and <font color="red"><code>)</code></font></b></legend>
@@ -211,16 +223,19 @@ write <font color="red"><code>'Don''t do this.'</code></font>
 
 </fieldset>
 
+<p></p>
 
 <h2><a
 name="Familiar functions, unfamiliar symbols">Familiar functions, unfamiliar symbols</a></h2>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>i.</code></font>, <font color="red"><code>i:</code></font> (monad)</b></legend>
 Sequences.
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>i.</code></font>, <font color="red"><code>i:</code></font> (dyad)</b></legend>
@@ -228,12 +243,14 @@ Index of first occurence: list i. elt.
 Index of last occurence: list i: elt.
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>j.</code></font> (monad and dyad)</b></legend>
 Imaginary. Complex.
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>p.</code></font> (monad and dyad)</b></legend>
@@ -241,19 +258,21 @@ Find roots: p. coeffs in increasing order
 Eval poly: coeffs p. where
 </fieldset>
 
-
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>%</code></font> (dyad)</b></legend>
 This is division.
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>#.</code></font> and <font color="red"><code>#:</code></font>(monad and dyad)</b></legend>
 From/To some base to/from decimal.
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>=</code></font>, <font color="red"><code>&lt;:</code></font>, <font color="red"><code>&gt;:</code></font>, <font color="red"><code>~:</code></font> (dyads)</b></legend>
@@ -261,7 +280,7 @@ These are all conditions testing for equality, $\leq$,
 $\geq$ and $\neq.$ A common mistake is to use <font color="red"><code>=</code></font> for assignment.
 </fieldset>
 
-
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>=.</code></font>, <font color="red"><code>=:</code></font> (dyad) </b></legend>
@@ -272,6 +291,7 @@ local assignment is confined within the file or function, while
 the global assignment has effect visible everywhere.
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>&lt;.</code></font>, <font color="red"><code>&gt;.</code></font> (monads and dyads)</b></legend>
@@ -279,6 +299,7 @@ As monads, these are floor and ceiling functions,
 respectively. As dyads, these compute minimum and maximum of two numbers.
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>+.</code></font>, <font color="red"><code>*.</code></font> (dyads) , <font color="red"><code>-.</code></font>
@@ -286,45 +307,51 @@ respectively. As dyads, these compute minimum and maximum of two numbers.
 These are boolean operators, or, and, not.
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>^</code></font>, <font color="red"><code>^.</code></font>, <font color="red"><code>%:</code></font> (monads)</b></legend>
 These are $e^x$ and $\log x$ and $\sqrt x$.
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>%.</code></font> (monad and dyad)</b></legend>
 Matrix inversion and least squares solution. 
 </fieldset>
 
-
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>i.</code></font> (monad)</b></legend>
 Creates a lis 0 1 2 3 ... up to one less than the argument.
 </fieldset> 
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>]</code></font> (monad)</b></legend> identity funtion.</fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>|:</code></font> (monad)</b></legend> transpose. Actually more
 general than that.</fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>NB.</code></font></b></legend> Comment. Not a function.</fieldset>
 
-
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>-.</code></font> (dyad)</b></legend>
 Set minus
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>!</code></font> (monad and dyad)</b></legend>
@@ -332,6 +359,7 @@ Factorial when monad, choose when dyad. You write <font color="red"><code>! 3</c
 mean $3!$ and <font color="red"><code>3 ! 4</code></font> to mean $^4C_3.$
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>?</code></font>, <font color="red"><code>?.</code></font> (monad and dyad)</b></legend>
@@ -342,27 +370,40 @@ The dotted version is similar, but uses fixed seed. Produces
 different results for 64 bit and 32 bit machines.
 </fieldset> 
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>|</code></font>(monad and dyad)</b></legend>
 Absolute value as monad. Remainder as dyad, <i>e.g.</i>, <font color="red"><code>3 | 4</code></font>
 returns 1.</fieldset>
 
+<p></p>
 
 <h2><a
 name="Less familiar functions">Less familiar functions</a></h2>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>~.</code></font> (monad)</b></legend> unique values</fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>~:</code></font> (monad)</b></legend> positions of first occurences
 of unique values</fieldset>
 
+<p></p>
 
+<fieldset>
+<legend><b><font color="red"><code>q:</code></font> (monad)</b></legend> prime factors.</fieldset>
 
+<p></p>
+
+<fieldset>
+<legend><b><font color="red"><code>q:</code></font> (dyad)</b></legend> prime factor exponents.</fieldset>
+
+<p></p>
 
 <h2><a
 name="Strange functions">Strange functions</a></h2>
@@ -375,6 +416,4 @@ name="Strange functions">Strange functions</a></h2>
 <td align="right"/>
 </tr>
 </table>
-<hr/>
-</body>
-</html>
+<hr/></body></html>
