--- a/jsoft/j6.html
+++ b/jsoft/j6.html
@@ -5,6 +5,9 @@
 <link type="text/css" rel="stylesheet" href="../tools/style.css"/>
 <style type="text/css">@font-face {font-family: SHREE_BAN_OTF_0592;src: local("../tools/SHREE_BAN_OTF_0592"),url(../tools/SHREE0592.woff) format("opentype");</style>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v19.0" nonce="Q7jTbrCq"></script>
+
 <script src="../tools/jquery-1.10.2.min.js"></script>
 
 <script>
@@ -95,6 +98,11 @@ body {
 .scrpt {
   border-left: 5px solid black;
 }
+
+.box {
+  border: 2px solid black;
+  display: inline-block;
+}
 </style>
 <script>
 window.onscroll = function() {myFunction()};
@@ -122,13 +130,12 @@ function myFunction() {
   else
     tphldr.innerHTML = header[index].innerHTML
 }
-</script><script type="text/javascript" src="https://www.isical.ac.in/~arnabc/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script type="text/javascript" src="../MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="../tools/htmlwidgets.js"></script>
+</script><script type="text/javascript" src="https://arnabc74.github.io/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script type="text/javascript" src="file:///home/asu/na/v/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="../tools/htmlwidgets.js"></script>
 <link href="../tools/rgl.css" rel="stylesheet"></link>
 <script src="../tools/rglClass.src.js"></script>
 <script src="../tools/CanvasMatrix.src.js"></script>
 <script src="../tools/rglWebGL.js"></script>
-</head>
-<body>
+</head><body>
 <div class="sticky" id="topholder"> </div>
 <a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
 <h3>Table of contents</h3>
@@ -151,12 +158,14 @@ If u is a verb, then u/ (monad) is "continued u".
 If u is a verb, then u/ (dyad) is outer product. 
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>&amp;.</code></font> (dyad adverb)</b></legend>
 Conjugation: u&amp;.v is $v ^{-1} u v$ as monad. (As a dyad?)
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>&amp;</code></font> (dyad adverb)</b></legend>
@@ -164,6 +173,7 @@ Conjugation: u&amp;.v is $v ^{-1} u v$ as monad. (As a dyad?)
  Similarly, u&amp;3 (as a monad) means the function $x\mapsto u(x,3)$.
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>@</code></font> (dyad adverb)</b></legend>
@@ -171,6 +181,7 @@ u@v (as a monad) means the function $y\mapsto u(3,y)$.
  Similarly, u&amp;3 (as a monad) means the function $x\mapsto u(x,3)$.
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>1!:2</code></font></b></legend>
@@ -183,7 +194,7 @@ single string (insert newlines appropriately), and then use this once. Overwrite
 of the same name.
 </fieldset>
 
-
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>/:</code></font> (dyad and monad)</b></legend>
@@ -192,35 +203,41 @@ permutation that sorts y in increasing order, and applies that
 permutation to x).  It is also a nice way to permute a list. Just
 supply the permutation as y. Also <font color="red"><code>x /: x</code></font> (or <font color="red"><code>/:~ x</code></font>)
 up-sorts x. 
+<p></p>
 
 <p></p>
 A monad it gives the permutation that up-sorts x. 
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>\:</code></font> (dyad and monad)</b></legend>
 Similar to <font color="red"><code>/:</code></font> but in the opposite direction.
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>":</code></font> (dyad and monad)</b></legend>
 Converts numbers to strings.
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code> &lt; </code></font> and <font color="red"><code> &gt; </code></font>(monad)</b></legend>
 Boxing and unboxing.
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>]</code></font> and <font color="red"><code>[</code></font>(monad and dyad)</b></legend>
 Identity, left, right.
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b>fork (monad and dyad)</b></legend>
@@ -238,6 +255,7 @@ Identity, left, right.
 
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b>hook (monad and dyad)</b></legend>
@@ -255,13 +273,14 @@ Identity, left, right.
 
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b>define</b></legend>
 
 <pre>
 id=. verb define
-
+<p></p>
 )
 </pre>
 The word <font color="red"><code>verb</code></font> may be replaced by <font color="red"><code>monad</code></font>
@@ -269,6 +288,7 @@ or <font color="red"><code>dyad</code></font> or <font color="red"><code>adverb<
 
 </fieldset>
 
+<p></p>
 
 <fieldset>
 <legend><b><font color="red"><code>\</code></font> and <font color="red"><code>\.</code></font>(monad adverb)</b></legend>
@@ -276,6 +296,7 @@ or <font color="red"><code>dyad</code></font> or <font color="red"><code>adverb<
 <font color="red"><code>u\.</code></font> will cumulate over suffixes. 
 </fieldset>
 
+<p></p>
 <hr/>
 <table width="100%" border="0">
 <tr>
@@ -283,6 +304,4 @@ or <font color="red"><code>dyad</code></font> or <font color="red"><code>adverb<
 <td align="right"/>
 </tr>
 </table>
-<hr/>
-</body>
-</html>
+<hr/></body></html>
